coordinated card.fact colors

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                         <h5 class="card-title display-3 mb-5">Numbers Facts</h5>
                         <p class="card-text">Enter a number and get a fact</p>
                         <input type="number" class="form-control form-control-lg mb-3" id="numberInput" placeholder="Enter a Number...">
-                        <a href="#" class="btn btn-primary mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="ajaxbtn">AJAX & XHR</a>
-                        <a href="#" class="btn btn-success mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="fetchbtn">Fetch API</a>
-                        <a href="#" class="btn btn-warning mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="asyncbtn">Async Await</a>
+                        <button href="#" class="btn btn-primary mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="ajaxbtn">AJAX & XHR</button>
+                        <button href="#" class="btn btn-success mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="fetchbtn">Fetch API</button>
+                        <button href="#" class="btn btn-warning mx-xs-5 mx-sm-5 mx-md-1 mx-lg-1 mb-3" id="asyncbtn">Async Await</button>
 
                     </div>
                     <div class="card" id="fact">
